--- a/frontend/react-app/src/index.css
+++ b/frontend/react-app/src/index.css
@@ -1,17 +1,14 @@
-/* Global styles */
-html,
+html {
+  overflow: hidden;
+}
+
 body {
-  height: 100%;
+  height: 100vh;
+  overflow-y: auto;
   margin: 0;
   padding: 0;
-  overflow: hidden;
 }
 
 #root {
   height: 100%;
-  background-color: #e2f0e5;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  overflow-y: hidden;
 }
